fix: increments z-index of submenu

--- a/src/app/components/partials/header/header.component.css
+++ b/src/app/components/partials/header/header.component.css
@@ -59,7 +59,7 @@ a span {
 
 .menu {
   position: absolute;
-  z-index: 1;
+  z-index: 10000;
   background: whitesmoke;
   display: none;
 }
